Fix spacing between trending and annouc. sections

--- a/style.css
+++ b/style.css
@@ -179,30 +179,36 @@ button:hover {
 .annouce-trending-sections {
   display: grid;
   padding-top: 20px;
-  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
-  align-content: space-around;
-  gap: 10%;
+  /* grid-template-rows: 1fr 1fr; */
+  /* align-content: space-around; */
+  gap: 5%;
 }
 .announce-content {
   display: grid;
+  background-color: #fff;
   grid-template-rows: repeat(auto-fit, 100px);
   gap: 3%;
   padding: 20px;
 }
 .annoucements-container {
   display: grid;
-  background-color: #fff;
+  grid-template-rows: 25px 330px;
 }
 .trending-container {
   display: grid;
-  padding: 20px;
-  background-color: #fff;
+  grid-template-rows: 25px 1fr;
+  padding-bottom: 40px;
 }
 .trending-card img {
   width: 50px;
   height: 50px;
   border: 1px solid rgb(233, 229, 229);
   /* border-radius: 25px; */
+}
+.trending-content {
+  display: grid;
+  grid-template-rows: repeat(4, 100px);
+  background-color: white;
 }
 .trending-card {
   display: flex;
